[package]
name = "dpc-common"
version = "0.1.0"
edition = "2024"

[dependencies]
pretty_dtoa = "0.3.0"
rustc-hash = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.11.1"
tracing = "0.1.41"
ariadne = { version = "0.5.0", features = ["auto-color"] }
hashbrown = "0.15.2"
smallvec = "1.14"
